--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
 
 spring.jpa.show-sql=true
-spring.security.jwt.secret=yoursecretkey
-spring.security.jwt.expiration-time=3600000  # 1 hour
+# spring.security.jwt.secret=yoursecretkey
+# spring.security.jwt.expiration-time=3600000  # 1 hour
