--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,53 @@
 spring.application.name=mission_back
 
 server.port=8080
+app.base-url=http://localhost:8080
+app.allowed-origins=http://localhost:3000
+app.login-page-url=${app.base-url}/auth/login
+app.login-success-url=${app.base-url}/auth/login-success
 
-# spring.datasource.url=jdbc:postgresql://172.18.0.2:5432/mydatabase
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+app.database.name=my_db
+app.database.username=www
+app.database.password=www
+# app.database.name=starter-kit-db
+# app.database.username=yu71
+# app.database.password=53cret
+app.database.host=localhost
+app.database.port=3306
+# TODO: hasah
+# app.vapid-public-key=
+# app.vapid-private-key=
+# app.vapid-subject=mailto:email@example.com
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# # spring.datasource.url=jdbc:postgresql://172.18.0.2:5432/mydatabase
+# spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+# spring.datasource.username=postgres
+# spring.datasource.password=postgres
+# spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:mysql://${app.database.host}:${app.database.port}/${app.database.name}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=FALSE
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=${app.database.username}
+spring.datasource.password=${app.database.password}
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.open-in-view=false
+# Github OAuth2
+spring.security.oauth2.client.registration.github.client-id=Ov23ligr9YC7IPOT3qvX
+spring.security.oauth2.client.registration.github.client-secret=e18a6099a9535855ab18849f4ab2bb4929626de5
 
-spring.jpa.show-sql=true
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.open-in-view=false
+
+# spring.jpa.show-sql=true
 # spring.security.jwt.secret=yoursecretkey
 # spring.security.jwt.expiration-time=3600000  # 1 hour
+
+spring.docker.compose.enabled=true
+spring.docker.compose.project-name=mission_back
+spring.docker.compose.file=compose.yml
