Added Pagination & Product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,7 @@ spring.security.oauth2.client.registration.github.client-secret=e18a6099a9535855
 spring.docker.compose.enabled=true
 spring.docker.compose.project-name=mission_back
 spring.docker.compose.file=compose.yml
+
+# Логыг debug түвшинд тохируулж, алдааны мэдээллийг харах
+logging.level.org.springframework.web=DEBUG
+logging.level.com.example.mission_back=DEBUG
